Apr 06, 2022
  added handling of xdb ids: (Rockland, Innoprot)

Feb 21, 2022
  updated log4j to avoid zero day exploit
  fixed parser; added handling of xdb ids: (ignored: FlyBase_Cell_line, Abcam, NRFC; added: EGA)

Oct 13, 2021
  parser: added support fro XDB_ID 'SLKBase'; added patch for some malformed ORDO ids
  
Jun 01, 2021
  parser: added support for XDB ID 'PerkinElmer'; fixed logic for some new data

May 13, 2021
  annotator: improved summary

Feb 09, 2021
  parser: added support for XDB ID 'Horizon_Discovery'

Nov 24, 2020
  parser: added support for XDB ID 'Progenetix'

Sep 23, 2020
  annotator: put correct term names in annotations (not term acc ids)

Sep 18, 2020
  loader: better handling of species specific NCI ids

Sep 17, 2020
  loader: added loading of NCI ids (esp. species specific NCI ids) to RDO ontology

Jul 09, 2020
  parser: updated to handle newest data from Cellosaurus

Mar 26, 2020
  annotator: creates IEA annotations based on NCI/ORDO mappings to RDO ontology

Mar 23, 2020
  parser: added handling of 'Karyotypic information' and ORDO xdb ids

Feb 28, 2020
  fixed typo in assoc types

Feb 27, 2020
  added loading of Cellosaurus xdb ids

Feb 26, 2020
  implemented loading of associations
  implemented loading of xdb ids

Feb 24, 2020
  finished cell lines loading: inserts, deletes and updates
  implemented loading of aliases

Feb 21, 2020
  finished parsing code
  implemented cell lines qc: insertions and deletions

Jan 29, 2020
  implemented parsing of Cell Line symbol, name, type and sex
  implemented rudimentary qc and loading code for Cell Line objects

Jan 28, 2020
  implemented rudimentary parsing of cellosaurus.obo file